<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:cardBackgroundColor="@color/color1"
        app:cardCornerRadius="10dp"
        app:cardElevation="5dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp">

            <TextView
                android:id="@+id/txtNombreArticulo"
                style="@style/TextAppearance.AppCompat.Title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:textColor="@color/colorPrimary"
                android:text="@string/titulo" />

            <TextView
                android:id="@+id/txtDoiArticulo"
                style="@style/TextAppearance.AppCompat.Title"
                android:layout_width="245dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/txtNombreArticulo"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="5dp"
                android:layout_marginBottom="5dp"
                android:text="@string/doi"
                android:textColor="@color/colorPrimary"
                android:textSize="12sp"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/txtFechaArticulo"
                style="@style/TextAppearance.AppCompat.Title"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/txtNombreArticulo"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="5dp"
                android:layout_marginBottom="5dp"
                android:text="@string/fecha"
                android:textAlignment="textEnd"
                android:textColor="@color/colorPrimary"
                android:textSize="11sp"
                android:textStyle="normal" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnViewPdf"
                android:layout_width="117dp"
                android:layout_height="40dp"
                android:layout_below="@id/txtFechaArticulo"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="1dp"
                android:backgroundTint="@color/colorPrimary"
                android:text="@string/view_pdf"
                android:textColor="@color/colorPrimaryDark"
                android:textStyle="bold"
                app:cardCornerRadius="90dp" />

            <TextView
                android:id="@+id/pdfLink"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="TextView"
                android:visibility="invisible"/>
        </RelativeLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>